--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -343,3 +343,25 @@ entrypoint = "./functions/add-question/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/add-question/*.html" ]
+
+[functions.category]
+enabled = true
+verify_jwt = true
+import_map = "./functions/category/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/category/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/category/*.html" ]
+
+[functions.question-set]
+enabled = true
+verify_jwt = true
+import_map = "./functions/question-set/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/question-set/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/question-set/*.html" ]
